tests/NormalTests/paczka1/fuzzy1/27048574.err
Error in line 1: 8o6 S525 58,3
Error in line 8: 7oCceRhMm S59 211,07
Error in line 16: DW0 S560 95,0
Error in line 15: 8o6 S525 45,9
Error in line 21: 8o6 S560 87,6
Error in line 23: 8o6 S525 63,7
Error in line 29: sdGM S560 89,5
Error in line 3: 7oCceRhMm S59 56,3
Error in line 32: Ol9bWN5ZxYN S525 20,7
Error in line 30: sdGM S59 50,4
Error in line 37: sdGM A445 0,1
